--- a/src/Styling/Basic.scss
+++ b/src/Styling/Basic.scss
@@ -102,6 +102,10 @@
             }
          }
     }
+    
+    .createPost-container { 
+        .List-container ul { margin: 0 auto; }
+    } 
 }
 
 
@@ -132,6 +136,7 @@
 .btn {
     &:before { content:""; position: absolute; left:0; width: 100%; height: 0%; background: $blue; z-index: -1; transition: 0.6s; }
     &:disabled { cursor:not-allowed; pointer-events: none; opacity: 0.5; }
+    &.interested { background-color: $blue; color: white;}
 }
 .btn1 {
     &:hover {
@@ -158,6 +163,12 @@
 
 
 }
+.text-area-container { padding-bottom: 15px; display: flex; justify-content: center; flex-direction: column;
+    span { @include fontTitle; display: block; text-align: center; }
+    .textarea { margin: 0 auto; width: 60%; border: 2px solid $blue; height: 300px; @include fontTitle; transition: 0.6s; border-radius: 15px; }
+
+
+}
 #global-message-container { min-width: 400px; min-height: 95px; border: 2px solid black; border-radius: 10px; position: fixed; top:100px; left: 50%; transform: translate(-50%, 0); background-color: white; transition: 0.6s top;
     &.error { border: 2px solid $red; background-color: rgb(245, 156, 156); }
     &.success { border: 2px solid rgb(93, 253, 93); background-color: rgb(219, 250, 173); }
@@ -166,7 +177,7 @@
     }
 }
 #message { font-size: 20px; line-height: 22px; padding: 10px; font-weight: 600; }
-.List-container {
+.List-container { text-align: center;
     ul { border: 1px solid $blue; border-radius: 10px; list-style: none; padding: 0; display: flex; flex-wrap: wrap; max-width: 600px; justify-content: center; min-height: 62px;
         li { display: flex; padding: 10px 25px 10px 10px; background-color: $yellow; border-radius: 25px; position: relative; margin: 10px 10px; cursor: pointer; transition: 0.2s background-color; max-width: 175px; font-size: 18px; line-height: 22px;
             .icon-1 { position: absolute; right: 5px; }
@@ -174,6 +185,27 @@
         }
     }
 
+}
+.post-container { width: calc( 100%- 40px); background-color: #fff; border-radius: 10px; display: flex; padding: 10px; flex-direction: column;
+    .author-container { order: 1; padding-bottom: 10px; display: flex;
+            .avatar { width: 50px; height: 50px; border-radius: 50%; }
+            .name { line-height: 50px; vertical-align: middle; padding-left: 20px;  }
+    }
+    .description-container { order: 2;}
+    .tags-container { order: 3; padding: 0; 
+        li { height: 20px; background-color: $yellow; border-radius: 20px; padding: 5px 10px; display: inline-block; margin-right: 5px; 
+            &:last-child { margin-right: 0; }
+            &.volunteer { background-color: $blue; color: #fff; }
+            &.user { background-color: $red; }
+        }
+    }
+    .action-container { display: flex; padding: 20px 0 0; 
+        .btn { margin: 0 10px 0 0 ; padding: 7px 20px; }
+        div { margin-right: 10px; }
+        .icon-container { 
+            svg { color:$yellow;  @include centerAbsolute; font-size: 25px;  pointer-events: none;}
+        }
+    }
 }
 
 //Keyframes animations
