--- a/src/Styling/Mixins.scss
+++ b/src/Styling/Mixins.scss
@@ -56,6 +56,11 @@ $navy: #7868e6;
     }
 
 }
+
+@mixin centerAbsolute {
+    position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);
+    
+}
 @mixin fontMainTitle { font-size: 26px; line-height: 40px; display: block;
     @media (max-width: 1300px)  {
         font-size: 24px; line-height: 30px; margin: 20px 0;
